Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_5강.ipynb
+++ b/오픈소스_데이터_분석_5강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Meanz12/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_5%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +46,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "import pandas as pd\n",
         "\n",
         "data = {\n",
         "    'student_id': [101, 102, 103, 104, 105],\n",
@@ -56,13 +56,14 @@
         "    'watch_rate': [0.95, 0.87, 0.99, 0.80, 0.93]\n",
         "}\n",
         "## DataFrame 생성\n",
-        "\n",
-        "## CSV 형식 저장\n"
+        "df = pd.DataFrame(data)\n",
+        "## CSV 형식 저장\n",
+        "df.to_csv('student_analysis.csv', encoding='utf-8', index=False)"
       ],
       "metadata": {
         "id": "DztLRI9gW2lk"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +79,7 @@
       "cell_type": "code",
       "source": [
         "### 라이브러리 임포트\n",
-        "\n",
+        "import json\n",
         "import pandas as pd\n",
         "\n",
         "data = {\n",
@@ -89,13 +90,16 @@
         "}\n",
         "\n",
         "## json.dump를 이용한 저장\n",
-        "\n",
-        "## DataFrame을 이용한 저장\n"
+        "with open('output.json', mode='w', encoding='utf-8') as f:\n",
+        "    json.dump(data, f, indent=4, ensure_ascii=False)\n",
+        "## DataFrame을 이용한 저장\n",
+        "df = pd.DataFrame([data])\n",
+        "df.to_json('output_df.json',orient='records',indent=4, force_ascii=False)"
       ],
       "metadata": {
         "id": "7bAgRpizW7Vj"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -119,21 +123,44 @@
         "    \"학과\": [\"컴퓨터학\", \"경영학\", \"농학\", \"교육학\", \"영어영문학\"],\n",
         "    \"동아리\": [\"프로그래밍\", \"독서토론\", \"로봇공학\", \"봉사활동\", \"음악감상\"]\n",
         "}\n",
-        "df = pd.DataFrame([data])\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
         "## DataFrame 인덱스 출력\n",
-        "\n",
+        "print(df.index)\n",
         "## DataFrame 컬럼 출력\n",
-        "\n",
+        "print(df.columns)\n",
         "## DataFrame 행 출력\n",
-        "\n",
-        "## DataFrame 값 출력\n"
+        "print(df.values.tolist())\n",
+        "print(df.values) # python numpy\n",
+        "## DataFrame 값 출력\n",
+        "print(df.values.flatten())"
       ],
       "metadata": {
-        "id": "dk3xneVAW9_g"
+        "id": "dk3xneVAW9_g",
+        "outputId": "02c91bf6-51a2-4f51-c768-2076f70d034b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RangeIndex(start=0, stop=5, step=1)\n",
+            "Index(['이름', '학년', '학점', '학과', '동아리'], dtype='object')\n",
+            "[['김철수', 1, 4.2, '컴퓨터학', '프로그래밍'], ['이영희', 2, 3.8, '경영학', '독서토론'], ['박민수', 3, 4.5, '농학', '로봇공학'], ['최지훈', 4, 3.9, '교육학', '봉사활동'], ['정소희', 2, 3.5, '영어영문학', '음악감상']]\n",
+            "[['김철수' 1 4.2 '컴퓨터학' '프로그래밍']\n",
+            " ['이영희' 2 3.8 '경영학' '독서토론']\n",
+            " ['박민수' 3 4.5 '농학' '로봇공학']\n",
+            " ['최지훈' 4 3.9 '교육학' '봉사활동']\n",
+            " ['정소희' 2 3.5 '영어영문학' '음악감상']]\n",
+            "['김철수' 1 4.2 '컴퓨터학' '프로그래밍' '이영희' 2 3.8 '경영학' '독서토론' '박민수' 3 4.5 '농학'\n",
+            " '로봇공학' '최지훈' 4 3.9 '교육학' '봉사활동' '정소희' 2 3.5 '영어영문학' '음악감상']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -159,15 +186,33 @@
         "}\n",
         "\n",
         "## 딕셔너리, csv, json으로 부터 DataFrame 생성\n",
-        "\n",
-        "\n",
+        "df1 = pd.DataFrame.from_dic(data)\n",
+        "df2 = pd.read_csv('student.csv')\n",
+        "df3 = pd.read_json('students.json')\n",
         "## 세가지 방법 결과 비교\n"
       ],
       "metadata": {
-        "id": "ISnPLEgNXAmi"
+        "id": "ISnPLEgNXAmi",
+        "outputId": "bf387e97-5737-4c74-abdd-a80dc0d154af",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "type object 'DataFrame' has no attribute 'from_dic'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2428573060.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m## 딕셔너리, csv, json으로 부터 DataFrame 생성\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mdf1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mdf2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'student.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mdf3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'students.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: type object 'DataFrame' has no attribute 'from_dic'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
